--- a/style.css
+++ b/style.css
@@ -13,17 +13,22 @@ body
 }
 #header{
     background-image: linear-gradient(
+    
         to right ,
         hwb(0 22% 77%),
         rgba(0, 0, 0, 0.1)
-      ), url("images/wp4166603-venom-4k-wallpapers.jpg");
-   
+      ), url("images/wp4166603-venom-4k-wallpapers.jpg") ;
+      
+      height: 100vh;
+      width: 100wh;
+    
     background-size: cover;
     background-position: center;
 }
-.container{
 
-    padding: 1em;
+.container{
+   
+    padding: 1px;
     font: bolder; 
     font-size: larger;
     
@@ -36,7 +41,7 @@ nav{
     display: flex;
   
     border: solid white;
-    width: 100%;
+    width: 50%;
      padding:0px;
     align-items: center;
     justify-content: space-between;
@@ -99,12 +104,13 @@ nav ul li a:hover::after{
 }
 /* ----------about--------- */
 #about{
-    margin-top: 200px;
+    margin: 0px;
 
     color: #ababab;
 }
 .raw{
-    display: auto;
+    display: flex;
+ 
     justify-content:space-between;
     flex-wrap: wrap;
 }
@@ -116,8 +122,12 @@ nav ul li a:hover::after{
     border-radius: 10px;
 }
 .about-col-2{
-    margin: 500px;
-    flex-basis: 60%;
+    display: flex;
+    justify-content: end;
+ 
+    width: 50%;
+    margin: 2px;
+    flex-basis: 30%;
 }
 .sub-title{
     font-size: 60px;
@@ -164,4 +174,12 @@ nav ul li a:hover::after{
 }
 .tab-contents.active-tab{
     display: block;
+}
+#about{
+ 
+    height: 100%;
+    width: 100%
+}
+.container nav{
+    margin-top: 30px;
 }
